# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/aafwk/standard/aafwk.gni")

config("ability_manager_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include/",
    "//third_party/jsoncpp/include",
    "${innerkits_path}/want/include",
    "//utils/native/base/include",
    "${innerkits_path}/uri/include",
    "${innerkits_path}/want/include/ohos/aafwk/content",
    "${kits_path}/ability/native/include",
    "${appexecfwk_innerkits_path}/libeventhandler/include",
    "${appexecfwk_inner_api_path}/appexecfwk_base/include",
    "${appexecfwk_inner_api_path}/appexecfwk_core/include/bundlemgr",
    "${innerkits_path}/app_manager/include/appmgr",
    "${kits_path}/appkit/native/app/include",
    "${distributeddatamgr_path}/appdatamgr/interfaces/inner_api/native/rdb/include",
    "${distributeddatamgr_path}/appdatamgr/interfaces/inner_api/native/appdatafwk/include",
    "${distributeddatamgr_path}/appdatamgr/interfaces/inner_api/native/dataability/include",
    "${innerkits_path}/dataobs_manager/include",
  ]

  defines = [ "ABILITY_COMMAND_FOR_TEST" ]

  if (ability_runtime_graphics) {
    include_dirs += [ "${multimedia_path}/interfaces/innerkits/include" ]

    defines += [ "SUPPORT_GRAPHICS" ]
  }

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("ability_manager") {
  sources = [
    "${kits_path}/ability/native/src/data_ability_operation.cpp",
    "${kits_path}/ability/native/src/data_ability_operation_builder.cpp",
    "${kits_path}/ability/native/src/data_ability_result.cpp",
    "${kits_path}/ability/native/src/task_handler.cpp",
    "${kits_path}/ability/native/src/task_handler_client.cpp",
    "${services_path}/abilitymgr/src/ability_connect_callback_stub.cpp",
    "${services_path}/abilitymgr/src/ability_manager_client.cpp",
    "${services_path}/abilitymgr/src/ability_manager_proxy.cpp",
    "${services_path}/abilitymgr/src/ability_manager_stub.cpp",
    "${services_path}/abilitymgr/src/ability_running_info.cpp",
    "${services_path}/abilitymgr/src/ability_scheduler_proxy.cpp",
    "${services_path}/abilitymgr/src/ability_scheduler_stub.cpp",
    "${services_path}/abilitymgr/src/ability_start_setting.cpp",
    "${services_path}/abilitymgr/src/caller_info.cpp",
    "${services_path}/abilitymgr/src/extension_running_info.cpp",
    "${services_path}/abilitymgr/src/image_info.cpp",
    "${services_path}/abilitymgr/src/launch_param.cpp",
    "${services_path}/abilitymgr/src/lifecycle_state_info.cpp",
    "${services_path}/abilitymgr/src/mission_info.cpp",
    "${services_path}/abilitymgr/src/mission_listener_proxy.cpp",
    "${services_path}/abilitymgr/src/mission_listener_stub.cpp",
    "${services_path}/abilitymgr/src/mission_snapshot.cpp",
    "${services_path}/abilitymgr/src/remote_mission_listener_proxy.cpp",
    "${services_path}/abilitymgr/src/remote_mission_listener_stub.cpp",
    "${services_path}/abilitymgr/src/sender_info.cpp",
    "${services_path}/abilitymgr/src/start_options.cpp",
    "${services_path}/abilitymgr/src/stop_user_callback_proxy.cpp",
    "${services_path}/abilitymgr/src/stop_user_callback_stub.cpp",
    "${services_path}/abilitymgr/src/want_receiver_stub.cpp",
    "${services_path}/abilitymgr/src/want_sender_info.cpp",
    "${services_path}/abilitymgr/src/want_sender_proxy.cpp",
    "${services_path}/abilitymgr/src/want_sender_stub.cpp",
    "${services_path}/abilitymgr/src/wants_info.cpp",
    "src/window_manager_service_handler_proxy.cpp",
    "src/window_manager_service_handler_stub.cpp",
  ]

  public_configs = [
    ":ability_manager_public_config",
    "${services_path}/abilitymgr:abilityms_config",
  ]

  deps = [ "//third_party/jsoncpp:jsoncpp" ]

  external_deps = [
    "ability_base:base",
    "ability_base:configuration",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:app_manager",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "relational_store:native_appdatafwk",
    "dataability:native_dataability",
    "relational_store:native_rdb",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  if (ability_runtime_graphics) {
    deps += []
    external_deps += [ "multimedia_image_standard:image_native" ]
  }

  subsystem_name = "aafwk"
  part_name = "ability_runtime"
}
