# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ability_manager_headers = {
  header_files = [
    "ability_connect_callback_interface.h",
    "ability_connect_callback_stub.h",
    "ability_manager_client.h",
    "ability_manager_errors.h",
    "ability_manager_interface.h",
    "ability_running_info.h",
    "ability_scheduler_interface.h",
    "extension_running_info.h",
    "lifecycle_state_info.h",
    "ability_state.h",
    "wants_info.h",
    "sender_info.h",
    "want_sender_info.h",
    "want_sender_interface.h",
    "want_receiver_interface.h",
    "ability_window_configuration.h",
    "ability_start_setting.h",
    "start_options.h",
    "global_configuration.h",
    "pixel_map.h",
  ]
  header_base = "interfaces/innerkits/ability_manager/include"
}
