# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/aafwk/standard/aafwk.gni")

config("base_config") {
  visibility = [ ":*" ]
}

config("base_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//utils/native/base/include",
  ]
}

baseImpl = "${kits_path}/base/cpp/src/ohos/aafwk/base"

ohos_shared_library("base") {
  sources = [
    "${baseImpl}/base.cpp",
    "${baseImpl}/base_object.cpp",
    "${baseImpl}/bool_wrapper.cpp",
    "${baseImpl}/byte_wrapper.cpp",
    "${baseImpl}/double_wrapper.cpp",
    "${baseImpl}/float_wrapper.cpp",
    "${baseImpl}/int_wrapper.cpp",
    "${baseImpl}/long_wrapper.cpp",
    "${baseImpl}/remote_object_wrapper.cpp",
    "${baseImpl}/short_wrapper.cpp",
    "${baseImpl}/string_wrapper.cpp",
    "${baseImpl}/user_object_wrapper.cpp",
    "${baseImpl}/zchar_wrapper.cpp",
  ]
  configs = [ ":base_config" ]
  public_configs = [ ":base_public_config" ]
  external_deps = [
    "ipc:ipc_core",
    "utils_base:utils",
  ]

  subsystem_name = "aafwk"
  part_name = "ability_base"
}
