# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/aafwk/standard/aafwk.gni")

config("dataobs_manager_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include/",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//foundation/aafwk/standard/services/dataobsmgr/include",
  ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("dataobs_manager") {
  sources = [
    "${services_path}/dataobsmgr/src/data_ability_observer_proxy.cpp",
    "${services_path}/dataobsmgr/src/data_ability_observer_stub.cpp",
    "${services_path}/dataobsmgr/src/dataobs_mgr_client.cpp",
    "${services_path}/dataobsmgr/src/dataobs_mgr_proxy.cpp",
  ]

  public_configs = [
    ":dataobs_manager_public_config",
    "${services_path}/dataobsmgr:dataobsms_config",
  ]

  deps = [
    "//foundation/appexecfwk/standard/common:libappexecfwk_common",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:zuri",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "aafwk"
  part_name = "ability_runtime"
}
