# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/aafwk/standard/aafwk.gni")

config("dataobs_manager_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include/",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "${kits_path}/ability/native/include",
    "${appexecfwk_innerkits_path}/libeventhandler/include",
    "${services_path}/dataobsmgr/include",
  ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("dataobs_manager") {
  sources = [
    "${services_path}/dataobsmgr/src/data_ability_observer_proxy.cpp",
    "${services_path}/dataobsmgr/src/data_ability_observer_stub.cpp",
    "${services_path}/dataobsmgr/src/dataobs_mgr_client.cpp",
    "${services_path}/dataobsmgr/src/dataobs_mgr_proxy.cpp",
  ]

  public_configs = [
    ":dataobs_manager_public_config",
    "${services_path}/dataobsmgr:dataobsms_config",
  ]

  deps = []

  external_deps = [
    "ability_base:zuri",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  subsystem_name = "aafwk"
  part_name = "ability_runtime"
}
